delete styling in footer

--- a/blogsfolder/blog4.html
+++ b/blogsfolder/blog4.html
@@ -119,11 +119,11 @@
             Although I haven’t chosen a final font yet, I’ve already put together a color palette that will define the site's visual style:
           </p>
           <ul>
-            <li><strong>Primary Colours:</strong></li>
+            <li>Primary Colours:</li>
             <li>Deep Teal: #0F5257</li>
             <li>Pastel Blue: #8DA9C4</li>
             <li>Warm Red: #AA4465</li>
-            <li><strong>Accent and Background Colours:</strong></li>
+            <li>Accent and Background Colours:</li>
             <li>Soft Cream: #FAF0CA</li>
             <li>Light Cream: #FAF8D4</li>
           </ul>
