--- a/blogsfolder/index.html
+++ b/blogsfolder/index.html
@@ -56,14 +56,14 @@
 <article id="blog-source" >
    
         <p class="e-content">
-    <strong>Readings:</strong>  
+     Readings:   
     <em>The Library of Babel</em> by Jorge Luis Borges (1941);  
     <em>A Revealing Look at the Dot-Com Bubble of 2000, and How It Shapes Our Lives Today</em> by Brian McCullough;  
     <em>Flash and Its History on the Web</em>
   </p>
 
   <p class="e-content">
-    <strong>GitHub Experience:</strong><br>
+     GitHub Experience: <br>
     My experience with GitHub is always a bit tumultuous. It usually starts well ,setting it up is quick and painless , but updating it becomes problematic. I found publishing my empty website surprisingly easy. In just a few steps, I had created and shared a path to my site with the world.
   </p>
 
@@ -76,7 +76,7 @@
   </p>
 
   <p class="e-content">
-    <strong>Flash & The Dot-Com Bubble:</strong><br>
+     Flash & The Dot-Com Bubble: <br>
     The second set of readings, about Flash and the dot-com bubble, shared strikingly similar narrative arcs. Both start with innovation, experience rapid (and unsustainable) growth due to overvaluation, and eventually collapse under their own weight. 
   </p>
 
@@ -85,7 +85,7 @@
   </p>
 
   <p class="e-content">
-    <strong>Cool Things on the Internet:</strong><br>
+     Cool Things on the Internet: <br>
     I’ve recently been fascinated by mathematical simulations like <em>Conway’s Game of Life</em> and <em>Langton’s Ant</em>. These systems are based on very simple rules but can produce surprisingly complex and beautiful patterns. 
   </p>
 
@@ -98,7 +98,7 @@
   </p>
 
   <p class="e-content">
-    <strong>My Goals for the Course:</strong><br>
+     My Goals for the Course: <br>
     I want to dive deeper into the coding intricacies of HTML, CSS, and JavaScript. More importantly, I aim to understand what makes a good user interface. I often struggle with creating simple and user-friendly UI in my games. Through this course, I hope to learn the theories and practices that make UI intuitive and engaging.
   </p>
 
