--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -143,11 +143,11 @@ One of my main inspirations is Adham Dannaway's website.</p>
 <article>
 <p>Comparing those early wireframes with my current designs, I can see a significant improvement in how I approach both structure and user experience. My new wireframes are much more organized, featuring clearly defined sections and consistent layouts across pages. Each page now has a specific purpose and is properly titled, helping users know where they are and what to expect. The pages I now include are:</p>
 <ul>
-    <li><strong>Homepage:</strong> Introduction to who I am, with clear text about me and navigation to other sections.</li>
-    <li><strong>Blogs Page:</strong> A space to share blog posts, with placeholders for text and blog titles.</li>
-    <li><strong>Design Page:</strong> Dedicated to showcasing my design work, including space for text descriptions and images.</li>
-    <li><strong>Projects Page:</strong> A gallery-style page to highlight key projects, including descriptions and supporting visuals.</li>
-    <li><strong>Profile Page:</strong> Focused on my background, achievements, and personal statement, with additional text and images.</li>
+    <li> Homepage:  Introduction to who I am, with clear text about me and navigation to other sections.</li>
+    <li> Blogs Page:  A space to share blog posts, with placeholders for text and blog titles.</li>
+    <li> Design Page:  Dedicated to showcasing my design work, including space for text descriptions and images.</li>
+    <li> Projects Page:  A gallery-style page to highlight key projects, including descriptions and supporting visuals.</li>
+    <li> Profile Page:  Focused on my background, achievements, and personal statement, with additional text and images.</li>
 </ul>
 <p>This new structure demonstrates a clearer understanding of content mapping and user flow. Each page connects logically to the others, and I now have a navigation bar that is consistent across all pages — something I had completely missed in my early wireframes. The navigation bar makes it easy for users to move between pages without frustration.</p>
 </article>
