fixed image sizing

--- a/blogsfolder/blog6.html
+++ b/blogsfolder/blog6.html
@@ -70,13 +70,13 @@
           <ul>
             <li>
               <figure>
-                <img class="u-photo" src="../images/fragpunk_nwtk.jpg" width="40%" height="40%" alt="Colour palette inspiration 1">
+                <img class="u-photo" src="../images/fragpunk_nwtk.jpg" width="40%" height="40%" alt=" Main colour palette inspiration">
                 <figcaption>fragpunk cover art</figcaption>
               </figure>
             </li>
             <li>
               <figure>
-                <img class="u-photo" src="../images/fragpunk2.png" width="40%" height="30%" alt="Colour palette inspiration 2">
+                <img class="u-photo" src="../images/fragpunk2.png" width="40%" height="30%" alt="Secondary colour palette inspiration 2">
                 <figcaption>fragpunk website</figcaption>
               </figure>
             </li>
