--- a/blogsfolder/blog7.html
+++ b/blogsfolder/blog7.html
@@ -62,7 +62,7 @@
           <ul>
             <li>
               <figure>
-                <img class="u-photo" src="../images/Screenshot 2025-03-29 215004.png" width="30%" height="20%" alt="Johannesburg Zoo Screenshot">
+                <img class="u-photo" src="../images/Screenshot 2025-03-29 215004.png"  alt="Johannesburg Zoo website Screenshot">
                 <figcaption>The jhbcityparksandzoo</figcaption>
               </figure>
             </li>
@@ -101,7 +101,7 @@
           <ul>
             <li>
               <figure>
-                <img class="u-photo" src="../images/Screenshot 2025-03-29 230549.png" width="30%" height="20%" alt="Parktown Boys Screenshot">
+                <img class="u-photo" src="../images/Screenshot 2025-03-29 230549.png" alt="Parktown Boys website Screenshot">
                 <figcaption>Parktown</figcaption>
               </figure>
             </li>
