--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -106,31 +106,31 @@ One of my main inspirations is Adham Dannaway's website.</p>
 <ul>
     <li>
       <figure>
-        <img class="u-photo" src="../images/ColourPallete.png" width="250" height="250" alt="Colour palette I will use">
+        <img class="u-photo" src="../images/ColourPallete.png"   alt="Colour palette I will use">
         <figcaption>Colour palette I will use for the website design.</figcaption>
       </figure>
     </li>
     <li>
       <figure>
-        <img class="u-photo" src="../images/HomepageScreenshot.png" width="250" height="250" alt="Wireframe for homepage">
+        <img class="u-photo" src="../images/HomepageScreenshot.png"   alt="Wireframe for homepage">
         <figcaption>Wireframe layout for the homepage of the site. A simple layout that serves as just an Introduction.</figcaption>
       </figure>
     </li>
     <li>
       <figure>
-        <img class="u-photo" src="../images/BlogsScreenshot.png" width="250" height="250" alt="Wireframe for blogs">
+        <img class="u-photo" src="../images/BlogsScreenshot.png"   alt="Wireframe for blogs">
         <figcaption>Wireframe showing how the blogs section will be structured.</figcaption>
       </figure>
     </li>
     <li>
       <figure>
-        <img class="u-photo" src="../images/DesignScreenshot.png" width="250" height="250" alt="Wireframe for design">
+        <img class="u-photo" src="../images/DesignScreenshot.png"   alt="Wireframe for design">
         <figcaption>Wireframe for the design showcase page. This page focuses on how I designed the website.</figcaption>
       </figure>
     </li>
     <li>
       <figure>
-        <img class="u-photo" src="../images/DevScreensShot.png" width="250" height="250" alt="Wireframe for dev">
+        <img class="u-photo" src="../images/DevScreensShot.png"   alt="Wireframe for dev">
         <figcaption>Wireframe for the portfolio section, where I focus on what projects I have worked on.</figcaption>
       </figure>
     </li>
@@ -167,31 +167,31 @@ One of my main inspirations is Adham Dannaway's website.</p>
 <ul> 
     <li>
       <figure>
-        <img class="u-photo" src="../images/currenthomepage.jpg" width="250" height="250" alt="Current wireframe for homepage">
+        <img class="u-photo" src="../images/currenthomepage.jpg" alt="Current wireframe for homepage">
         <figcaption>Current wireframe layout for the homepage. I will have an image of myself that will be half drawn and half a real image. This willl serve to show both my engineering and digital arts specialties. When hovered over, that side wil expand ie: the image will be completely drawn.  </figcaption>
       </figure>
     </li>
     <li>
       <figure>
-        <img class="u-photo" src="../images/currentblogs.jpg" width="250" height="250" alt="Current wireframe for blogs">
+        <img class="u-photo" src="../images/currentblogs.jpg"   alt="Current wireframe for blog page">
         <figcaption>Current wireframe design for the blogs section. When a blog title is selected on the left, the text will be injected into the right blog</figcaption>
       </figure>
     </li>
     <li>
       <figure>
-        <img class="u-photo" src="../images/currentdesign.jpg" width="250" height="250" alt="Current wireframe for design">
+        <img class="u-photo" src="../images/currentdesign.jpg"   alt="Current wireframe for design page">
         <figcaption>Current wireframe concept for the design page.</figcaption>
       </figure>
     </li>
     <li>
       <figure>
-        <img class="u-photo" src="../images/currentrpoject.jpg" width="250" height="250" alt="Current wireframe for dev">
+        <img class="u-photo" src="../images/currentrpoject.jpg"   alt="Current wireframe for dev page">
         <figcaption>Current wireframe for the development portfolio section. The images will show the cover image of my project and the name. When hovered over more text and information will be presented</figcaption>
       </figure>
     </li>
     <li>
       <figure>
-        <img class="u-photo" src="../images/currentprofile.jpg" width="250" height="250" alt="Current wireframe for profile">
+        <img class="u-photo" src="../images/currentprofile.jpg"   alt="Current wireframe for profile page">
         <figcaption>Current wireframe layout for the profile page.</figcaption>
       </figure>
     </li>
