--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <li>
           <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
             <figure>
-              <img class="uphoto" src="profilefolder/images/html.png" width="250" height="250" alt="html logo">
+              <img class="uphoto" src="profilefolder/images/html.png"  alt="html logo">
               <figcaption>HTML</figcaption>
             </figure>
             </a>
@@ -117,7 +117,7 @@
         <li>
           <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">
             <figure>
-              <img class="uphoto" src="profilefolder/images/css-3.png" width="250" height="250" alt="css logo">
+              <img class="uphoto" src="profilefolder/images/css-3.png"  alt="css logo">
               <figcaption>CSS</figcaption>
             </figure>
           </a>
