general fixes to meta data titles

--- a/blogsfolder/blog2.html
+++ b/blogsfolder/blog2.html
@@ -4,7 +4,7 @@
   
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ali Raffee second Blog</title>
+<title>Second Blog Page</title>
  <meta name="description" content="My blog about my initital design and wireframes for my Website" />
   <meta author="Ali Raffee" />
   <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, website, html, wireframe" />
