--- a/blogsfolder/blog3.html
+++ b/blogsfolder/blog3.html
@@ -4,7 +4,7 @@
   
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-title>Ali Raffee third Blog</title>
+<title>third Blog Page</title>
  <meta name="description" content="Blog about UI and Ux user experience " />
   <meta author="Ali Raffee" />
   <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, UI, UX, user experience " />
