--- a/blogsfolder/blog4.html
+++ b/blogsfolder/blog4.html
@@ -4,7 +4,7 @@
   
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ali Raffee forth Blog</title>
+<title>forth Blog Page</title>
 <meta name="description" content="Blog about web site information and what experience should be tailored to. " />
   <meta author="Ali Raffee" />
   <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, user experience, website influence" />
