--- a/devfolder/dev.html
+++ b/devfolder/dev.html
@@ -4,7 +4,7 @@
   
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ali Raffee Projects page </title>
+  <title> Page showcasing projects </title>
   <meta name="description" content="showcase of projects in languages python, C++, C# aswelll as photography" />
   <meta author="Ali Raffee" />
   <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, Portfolio, Projects, Game Development, Photography" />
