--- a/blogsfolder/blog5.html
+++ b/blogsfolder/blog5.html
@@ -4,7 +4,7 @@
   
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ali Raffee fifth Blog</title>
+<title>fifth Blog Page</title>
 <meta name="description" content="Second rendition of wireframe with html and css " />
   <meta author="Ali Raffee" />
   <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, wireframe, updated wireframe, css" />
