--- a/blogsfolder/blog7.html
+++ b/blogsfolder/blog7.html
@@ -4,7 +4,7 @@
   
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ali Raffee sixth Blog</title>
+<title>seventh Blog Page</title>
 <meta name="description" content="Blog about design elements such as colour palletes, fonts and UI elements " />
   <meta author="Ali Raffee" />
   <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, colour palletes, fonts, UI elements, colour palletes  " />
