--- a/blogsfolder/index.html
+++ b/blogsfolder/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Ali Raffee Blog Page</title>
+<title> Blog pages</title>
  <meta name="description" content="The first blog, talking about my experience with the internet and using github for the first time." />
   <meta author="Ali Raffee" />
   <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, internet, GitHub" />
