--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ali Raffee Homepage</title>
+    <title>websites Homepage</title>
     <meta name="description" 
-      content="Ali Raffee's profile website done for DIGA3008A INteractive media course at WITS University. This is the homepage of the website."> ">
+      content="Ali Raffee's profile website done for DIGA3008A INteractive media course at WITS University. This is the homepage of the website."> 
     <meta author="Ali Raffee">
     <meta name="keywords" content="Ali Raffee, Portfolio, DIGA3008A, Interactive Media, WITS University, Homepage">
     <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
@@ -18,7 +18,7 @@
      <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tektur:wght@600&display=swap" rel="stylesheet">
  
 </head>
-<body >
+<body>
   <header>
     <nav class="top-nav">
         <div class="nav-container">
