updated semantic markup with header

--- a/blogsfolder/blog7.html
+++ b/blogsfolder/blog7.html
@@ -17,6 +17,7 @@
 </head>
 
 <body >
+  <header>
  <nav class="top-nav">
      <div class="nav-container">
    <ul class="nav-links">
@@ -33,6 +34,7 @@
       </button>
   </div>
   </nav>
+  </header>
 
   <main>
     <section class="layout">
