--- a/blogsfolder/index.html
+++ b/blogsfolder/index.html
@@ -18,6 +18,7 @@
 <link rel="stylesheet" href="blogsstyles.css">
 </head>
 <body >
+  <header>
   <nav class="top-nav">
      <div class="nav-container">
    <ul class="nav-links">
@@ -33,7 +34,9 @@
         <div class="line3"></div>
       </button>
   </div>
+
   </nav>
+  </header>
 
   <main>
     <section class="layout">
