--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -19,7 +19,7 @@
      <link rel="stylesheet" href="designstyle.css">
 </head>
 <body>
-
+<header>
   <nav class="top-nav">
      <div class="nav-container">
     <ul class="nav-links">
@@ -36,7 +36,8 @@
       </button>
   </div>
     </nav>
-
+    </header>
+<main>
 
 
 <h1 id="DesignTitle">Design</h1>
@@ -300,10 +301,10 @@ I attempted to add javascript to fix issues in my website. Firstly I started wit
 
 
   <script src="../scriptsfolder/overall.js"></script>
-</body>
 
+</main>
 <footer>
     
 Alulu Studios 2025</footer>
-
+</body>
 </html>
