--- a/devfolder/dev.html
+++ b/devfolder/dev.html
@@ -17,8 +17,9 @@
   <link rel="stylesheet" href="devstyle.css" />
   <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;700&family=Barlow+Condensed:wght@400;700&family=Tektur:wght@600&display=swap" rel="stylesheet" />
 </head>
-<main>
+
 <body >
+  <header>
   <nav class="top-nav">
    <div class="nav-container">
     <ul class="nav-links">
@@ -38,7 +39,8 @@
     </div>
   
   </nav>
-
+  </header>
+  <main>
   <h1>Projects</h1>
 
   <section class="projects-grid">
