--- a/blogsfolder/blog4.html
+++ b/blogsfolder/blog4.html
@@ -16,6 +16,7 @@
 <link rel="stylesheet" href="blogsstyles.css">
 </head>
 <body >
+  <header>
   <nav class="top-nav">
      <div class="nav-container">
    <ul class="nav-links">
@@ -32,6 +33,7 @@
       </button>
   </div>
   </nav>
+  <header>
 
   <main>
     <section class="layout">
