--- a/blogsfolder/blog2.html
+++ b/blogsfolder/blog2.html
@@ -7,6 +7,8 @@
 <title>Second Blog Page</title>
  <meta name="description" content="My blog about my initital design and wireframes for my Website" />
   <meta author="Ali Raffee" />
+   <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tektur:wght@600&display=swap" rel="stylesheet">
+
   <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, website, html, wireframe" />
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
 <meta property="og:title" content="Ali Raffee's Portfolio">
