--- a/blogsfolder/blog3.html
+++ b/blogsfolder/blog3.html
@@ -7,6 +7,7 @@
 <title>third Blog Page</title>
  <meta name="description" content="Blog about UI and Ux user experience " />
   <meta author="Ali Raffee" />
+  
   <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, UI, UX, user experience " />
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
 <meta property="og:title" content="Ali Raffee's Portfolio">
@@ -14,6 +15,8 @@
 <link rel="stylesheet" href="../stylefolder/navbar.css">
 <link rel="stylesheet" href="../stylefolder/normalize.css">
 <link rel="stylesheet" href="blogsstyles.css">
+ <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tektur:wght@600&display=swap" rel="stylesheet">
+
 </head>
 <body >
   <header>
