blog pages complete

--- a/blogsfolder/blog6.html
+++ b/blogsfolder/blog6.html
@@ -47,13 +47,18 @@
           <li><a href="blog5.html"> Wireframes and UI Elements for a Professional and Personal Portfolio</a></li>
           <li><a href="blog6.html">Designing a Portfolio: Color Palettes, Fonts, and UI Inspirations</a></li>
           <li><a href="blog7.html">Analyzing Website Designs: Johannesburg Zoo and Parktown Boys</a></li>
+          <li><a href="essay1.html"> Dark practices on Parktown boys website</a></li>
+          <li><a href="blog9.html">Reflection on the Digital Divide</a></li>
+          <li><a href="blog10.html">Internet as a Human Right</a></li>
+          <li><a href="blog11.html"> Further reflection on digital divide</a></li>
+          <li><a href="blog12.html"> Decoloniality in my website</a></li>
+          <li><a href="blog13.html">What would an ethical internet look like</a></li>
         </ul>
       </nav>
-
+      <section class="blog-content">
       <div id="typed-blog"></div>
         <article id="blog-source" >
-        <h1 class="p-name">Designing a Portfolio: Color Palettes, Fonts, and UI Inspirations</h1>
-        <article>
+        <h1 class="p-name">Wireframes and UI Elements for a Professional and Personal Portfolio</h1>       
           <p class="e-content">
             I want a clear and functional website that displays both my engineering and digital arts achievements. 
             For the visual elements, I will blend soft shapes and bold, geometric fonts to create a stark contrast. 
@@ -86,12 +91,11 @@
             </li>
           </ul>
         </article>
-        
-        </article>
+       
       </section>
     </section>
      <script src="../scriptsfolder/overall.js"></script>
-     <script src="script.js"></script>
+    <script src="script.js"></script>
   </main>
 
   <footer>
