--- a/blogsfolder/blog4.html
+++ b/blogsfolder/blog4.html
@@ -48,6 +48,12 @@
           <li><a href="blog5.html"> Wireframes and UI Elements for a Professional and Personal Portfolio</a></li>
           <li><a href="blog6.html">Designing a Portfolio: Color Palettes, Fonts, and UI Inspirations</a></li>
           <li><a href="blog7.html">Analyzing Website Designs: Johannesburg Zoo and Parktown Boys</a></li>
+          <li><a href="essay1.html"> Dark practices on Parktown boys website</a></li>
+          <li><a href="blog9.html">Reflection on the Digital Divide</a></li>
+          <li><a href="blog10.html">Internet as a Human Right</a></li>
+          <li><a href="blog11.html"> Further reflection on digital divide</a></li>
+          <li><a href="blog12.html"> Decoloniality in my website</a></li>
+          <li><a href="blog13.html">What would an ethical internet look like</a></li>
         </ul>
       </nav>
 
