added more to project page

--- a/devfolder/dev.html
+++ b/devfolder/dev.html
@@ -85,6 +85,20 @@
             </figure>
           </a>
     </article>
+   <article class="project-card">
+        <a href="../testing/index.html" target="_blank" class="card-link">
+            <figure>
+            
+                <img src="../images/helicopter.png" alt="Java reactive background" />
+        
+                <figcaption>
+                <h2>Java reactive background </h2>
+                <p>A javascript project that follows and reacts to the mouse.</p>
+                </figcaption>
+            </figure>
+        </a>
+    </article>
+
   </section>
   <section class="projects-grid">
    <article>
