--- a/devfolder/dev.html
+++ b/devfolder/dev.html
@@ -86,14 +86,14 @@
           </a>
     </article>
    <article class="project-card">
-        <a href="../testing/index.html" target="_blank" class="card-link">
+        <a href="../flowerfolder/index.html" target="_blank" class="card-link">
             <figure>
             
-                <img src="../images/helicopter.png" alt="Java reactive background" />
+                <img src="../images/reactiveBackground.png" alt="Java reactive background" />
         
                 <figcaption>
                 <h2>Java reactive background </h2>
-                <p>A javascript project that follows and reacts to the mouse.</p>
+                <p>A javascript project that follows and reacts to the mouse, and one where flowers fall.</p>
                 </figcaption>
             </figure>
         </a>
