--- a/testing/index.html
+++ b/testing/index.html
@@ -9,6 +9,8 @@
 <body>
     <canvas id="background"></canvas>
     <button id="toggle">Switch to Dimmer Mode</button>
+    <a href="../flowerfolder/index.html">
+    <button id="flower">Go to Testing Page</button>
     <script src="script.js"></script>
 </body>
 </html>
