back to top button

--- a/blogsfolder/blog12.html
+++ b/blogsfolder/blog12.html
@@ -82,6 +82,7 @@ I started the next phase of the design process with beginning by planning what I
     </section>
      <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
+     <button id="backToTop" title="Back to top">↑</button>
   </main>
 
   <footer>
