--- a/blogsfolder/blog9.html
+++ b/blogsfolder/blog9.html
@@ -92,6 +92,7 @@ I find the who would set them to be the most interesting question. If each count
     </section>
      <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
+     <button id="backToTop" title="Back to top">↑</button>
   </main>
 
   <footer>
