--- a/blogsfolder/essay1.html
+++ b/blogsfolder/essay1.html
@@ -169,6 +169,7 @@
     </section>
       <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
+     <button id="backToTop" title="Back to top">↑</button>
   </main>
 
   <footer>
