--- a/blogsfolder/blog10.html
+++ b/blogsfolder/blog10.html
@@ -87,6 +87,7 @@ Beyond this, the article poses the question: “What should be the rules governi
     </section>
      <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
+     <button id="backToTop" title="Back to top">↑</button>
   </main>
 
   <footer>
