--- a/blogsfolder/blog11.html
+++ b/blogsfolder/blog11.html
@@ -93,6 +93,7 @@ I think the reading helped me realise that digital inequality isn’t just about
     </section>
      <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
+     <button id="backToTop" title="Back to top">↑</button>
   </main>
 
   <footer>
