--- a/blogsfolder/blog13.html
+++ b/blogsfolder/blog13.html
@@ -84,6 +84,7 @@
     </section>
      <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
+     <button id="backToTop" title="Back to top">↑</button>
   </main>
 
   <footer>
