--- a/blogsfolder/blog3.html
+++ b/blogsfolder/blog3.html
@@ -126,6 +126,7 @@
     </section>
      <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
+     <button id="backToTop" title="Back to top">↑</button>
   </main>
 
   <footer>
