--- a/blogsfolder/blog7.html
+++ b/blogsfolder/blog7.html
@@ -138,6 +138,7 @@
     </section>
      <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
+     <button id="backToTop" title="Back to top">↑</button>
   </main>
 
   <footer>
