--- a/blogsfolder/index.html
+++ b/blogsfolder/index.html
@@ -115,6 +115,7 @@
 
      <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
+     <button id="backToTop" title="Back to top">↑</button>
   <footer>
     Alulu Studios 2025
   </footer>
