--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -301,7 +301,7 @@ I attempted to add javascript to fix issues in my website. Firstly I started wit
 
 
   <script src="../scriptsfolder/overall.js"></script>
-
+<button id="backToTop" title="Back to top">↑</button>
 </main>
 <footer>
     
