--- a/devfolder/dev.html
+++ b/devfolder/dev.html
@@ -117,7 +117,7 @@
   </section>
   <section class="projects-grid">
      <script src="../scriptsfolder/overall.js"></script>
-
+<button id="backToTop" title="Back to top">↑</button>
     </main>
   <footer>
 Alulu Studios 2025  </footer>
