--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
    
   
     <main>
+
     <div class = "h-card">
     <div class ="Contact info">
         <h1 class="p-name">Ali Raffee</h1>
@@ -126,10 +127,12 @@
     </ul>
     
     <script src="scriptsfolder/overall.js"></script>
+
     </main>
     <footer>
         
         Alulu Studios 2025
     </footer>
+    <button id="backToTop" title="Back to top">↑</button>
 </body>
 </html>
