i dont even know

--- a/blogsfolder/blog13.html
+++ b/blogsfolder/blog13.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ninth Blog Page</title>
 <meta name="description" content="Blog about the concept of an ethical internet" />
-  <meta author="Ali Raffee" />
+ <meta name="author" content="Ali Raffee" />
   <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, ethical, ethically, ethical internet" />
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
 <meta property="og:title" content="Ali Raffee's Portfolio">
@@ -52,7 +52,7 @@
           <li><a href="blog10.html">Internet as a Human Right</a></li>
           <li><a href="blog11.html"> Further reflection on digital divide</a></li>
           <li><a href="blog12.html"> Decoloniality in my website</a></li>
-            <li><a href="blog13.html">What would an ethical internet look like</a></li>
+            <li><a id="activeBlog">What would an ethical internet look like</a></li>
             
         </ul>
       </nav>
