--- a/blogsfolder/blog2.html
+++ b/blogsfolder/blog2.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Second Blog Page</title>
  <meta name="description" content="My blog about my initital design and wireframes for my Website" />
-  <meta author="Ali Raffee" />
+ <meta name="author" content="Ali Raffee" />
    <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tektur:wght@600&display=swap" rel="stylesheet">
 
   <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, website, html, wireframe" />
@@ -42,7 +42,7 @@
       <nav class="blog-nav">
         <ul>
           <li><a href="index.html">Exploring the Internet and My GitHub Experience</a></li>
-          <li><a href="blog2.html">Reflecting on Initial Wireframes and Website Structure</a></li>
+          <li><a id ="activeBlog">Reflecting on Initial Wireframes and Website Structure</a></li>
           <li><a href="blog3.html">User Interface and Experience Design: Crafting a Simple Yet Effective Portfolio</a></li>
           <li><a href="blog4.html"> A Look at Website Inspirations and Design Preferences</a></li>
           <li><a href="blog5.html"> Wireframes and UI Elements for a Professional and Personal Portfolio</a></li>
