--- a/blogsfolder/blog3.html
+++ b/blogsfolder/blog3.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>third Blog Page</title>
  <meta name="description" content="Blog about UI and Ux user experience " />
-  <meta author="Ali Raffee" />
+ <meta name="author" content="Ali Raffee" />
   
   <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, UI, UX, user experience " />
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
@@ -44,7 +44,7 @@
         <ul>
           <li><a href="index.html">Exploring the Internet and My GitHub Experience</a></li>
           <li><a href="blog2.html">Reflecting on Initial Wireframes and Website Structure</a></li>
-          <li><a href="blog3.html">User Interface and Experience Design: Crafting a Simple Yet Effective Portfolio</a></li>
+          <li><a id ="activeBlog">User Interface and Experience Design: Crafting a Simple Yet Effective Portfolio</a></li>
           <li><a href="blog4.html"> A Look at Website Inspirations and Design Preferences</a></li>
           <li><a href="blog5.html"> Wireframes and UI Elements for a Professional and Personal Portfolio</a></li>
           <li><a href="blog6.html">Designing a Portfolio: Color Palettes, Fonts, and UI Inspirations</a></li>
