--- a/blogsfolder/blog6.html
+++ b/blogsfolder/blog6.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>sixth Blog Page</title>
 <meta name="description" content="Blog about design elements such as colour palletes, fonts and UI elements " />
-  <meta author="Ali Raffee" />
+ <meta name="author" content="Ali Raffee" />
   <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, colour palletes, fonts, UI elements, colour palletes  " />
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
 <meta property="og:title" content="Ali Raffee's Portfolio">
@@ -45,7 +45,7 @@
           <li><a href="blog3.html">User Interface and Experience Design: Crafting a Simple Yet Effective Portfolio</a></li>
           <li><a href="blog4.html"> A Look at Website Inspirations and Design Preferences</a></li>
           <li><a href="blog5.html"> Wireframes and UI Elements for a Professional and Personal Portfolio</a></li>
-          <li><a href="blog6.html">Designing a Portfolio: Color Palettes, Fonts, and UI Inspirations</a></li>
+          <li><a id="activeBlog">Designing a Portfolio: Color Palettes, Fonts, and UI Inspirations</a></li>
           <li><a href="blog7.html">Analyzing Website Designs: Johannesburg Zoo and Parktown Boys</a></li>
           <li><a href="essay1.html"> Dark practices on Parktown boys website</a></li>
           <li><a href="blog9.html">Reflection on the Digital Divide</a></li>
