--- a/blogsfolder/index.html
+++ b/blogsfolder/index.html
@@ -7,7 +7,7 @@
 
 <title> Blog pages</title>
  <meta name="description" content="The first blog, talking about my experience with the internet and using github for the first time." />
-  <meta author="Ali Raffee" />
+ <meta name="author" content="Ali Raffee" />
   <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, internet, GitHub" />
 
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
@@ -44,7 +44,7 @@
     <section class="layout">
       <nav class="blog-nav">
         <ul>
-          <li><a href="index.html">Exploring the Internet and My GitHub Experience</a></li>
+          <li><a id ="activeBlog">Exploring the Internet and My GitHub Experience</a></li>
           <li><a href="blog2.html">Reflecting on Initial Wireframes and Website Structure</a></li>
           <li><a href="blog3.html">User Interface and Experience Design: Crafting a Simple Yet Effective Portfolio</a></li>
           <li><a href="blog4.html"> A Look at Website Inspirations and Design Preferences</a></li>
