--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Design Process of the website</title>
     <meta name="description" content="The design process of creating this website" />
-    <meta author="Ali Raffee" />
+    
+    <meta name="author" content="Ali Raffee" />
     <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, Portfolio, design, design process, creation" />
 
     <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
