--- a/devfolder/dev.html
+++ b/devfolder/dev.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title> Page showcasing projects </title>
   <meta name="description" content="showcase of projects in languages python, C++, C# aswelll as photography" />
-  <meta author="Ali Raffee" />
+ <meta name="author" content="Ali Raffee" />
   <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, Portfolio, Projects, Game Development, Photography" />
 
   <link rel="icon" href="../images/favicon.ico" type="image/x-icon" />
