--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>websites Homepage</title>
     <meta name="description" 
       content="Ali Raffee's profile website done for DIGA3008A INteractive media course at WITS University. This is the homepage of the website."> 
-    <meta author="Ali Raffee">
+     <meta name="author" content="Ali Raffee" />
     <meta name="keywords" content="Ali Raffee, Portfolio, DIGA3008A, Interactive Media, WITS University, Homepage">
     <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Ali Raffee's Portfolio" />
