--- a/blogsfolder/blog4.html
+++ b/blogsfolder/blog4.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>forth Blog Page</title>
 <meta name="description" content="Blog about web site information and what experience should be tailored to. " />
-  <meta author="Ali Raffee" />
+ <meta name="author" content="Ali Raffee" />
   <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, user experience, website influence" />
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
 <meta property="og:title" content="Ali Raffee's Portfolio">
@@ -44,7 +44,7 @@
           <li><a href="index.html">Exploring the Internet and My GitHub Experience</a></li>
           <li><a href="blog2.html">Reflecting on Initial Wireframes and Website Structure</a></li>
           <li><a href="blog3.html">User Interface and Experience Design: Crafting a Simple Yet Effective Portfolio</a></li>
-          <li><a href="blog4.html"> A Look at Website Inspirations and Design Preferences</a></li>
+          <li><a id="activeBlog"> A Look at Website Inspirations and Design Preferences</a></li>
           <li><a href="blog5.html"> Wireframes and UI Elements for a Professional and Personal Portfolio</a></li>
           <li><a href="blog6.html">Designing a Portfolio: Color Palettes, Fonts, and UI Inspirations</a></li>
           <li><a href="blog7.html">Analyzing Website Designs: Johannesburg Zoo and Parktown Boys</a></li>
