--- a/blogsfolder/blog9.html
+++ b/blogsfolder/blog9.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ninth Blog Page</title>
 <meta name="description" content="Blog about Reflection on the Digital Divide " />
-  <meta author="Ali Raffee" />
+ <meta name="author" content="Ali Raffee" />
   <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, digital divide" />
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
 <meta property="og:title" content="Ali Raffee's Portfolio">
@@ -48,7 +48,7 @@
           <li><a href="blog6.html">Designing a Portfolio: Color Palettes, Fonts, and UI Inspirations</a></li>
           <li><a href="blog7.html">Analyzing Website Designs: Johannesburg Zoo and Parktown Boys</a></li>
           <li><a href="essay1.html"> Dark practices on Parktown boys website</a></li>
-          <li><a href="blog9.html">Reflection on the Digital Divide</a></li>
+          <li><a id="activeBlog">Reflection on the Digital Divide</a></li>
           <li><a href="blog10.html">Internet as a Human Right</a></li>
           <li><a href="blog11.html"> Further reflection on digital divide</a></li>
           <li><a href="blog12.html"> Decoloniality in my website</a></li>
