--- a/blogsfolder/essay1.html
+++ b/blogsfolder/essay1.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ninth Blog Page</title>
 <meta name="description" content="essay about malpractice in Parktown Boys website " />
-  <meta author="Ali Raffee" />
+ <meta name="author" content="Ali Raffee" />
   <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, digital divide, parktown boys, parktown boy, parktown boys website, dark, practices, unethical, website analysis" />
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
 <meta property="og:title" content="Ali Raffee's Portfolio">
@@ -47,7 +47,7 @@
           <li><a href="blog5.html"> Wireframes and UI Elements for a Professional and Personal Portfolio</a></li>
           <li><a href="blog6.html">Designing a Portfolio: Color Palettes, Fonts, and UI Inspirations</a></li>
           <li><a href="blog7.html">Analyzing Website Designs: Johannesburg Zoo and Parktown Boys</a></li>
-          <li><a href="essay1.html"> Dark practices on Parktown boys website</a></li>
+          <li><a id="activeBlog"> Dark practices on Parktown boys website</a></li>
             <li><a href="blog9.html">Reflection on the Digital Divide</a></li>
           <li><a href="blog10.html">Internet as a Human Right</a></li>
           <li><a href="blog11.html"> Further reflection on digital divide</a></li>
