--- a/index.html
+++ b/index.html
@@ -131,7 +131,15 @@
     </main>
     <footer>
         
-        Alulu Studios 2025
+       <p class="footer-content"> Alulu Studios 2025
+          <div class="footer-icons">
+      <a href="https://github.com/yourusername" target="_blank" aria-label="GitHub">
+        <img src="images/github-logo-png_seeklogo-304612.png" alt="github" class="icon">
+
+      </a>
+      <a href="https://yourname.itch.io/" target="_blank" aria-label="Itch.io">
+        <img src="images/download.png" alt="Itch.io" class="icon">
+      </a>
     </footer>
     <button id="backToTop" title="Back to top">↑</button>
 </body>
