--- a/testing/index.html
+++ b/testing/index.html
@@ -5,12 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animated Background</title>
     <link rel="stylesheet" href="style.css">
+<meta name="description" content="A test page with a reactive background" />
+  <meta name="author" content="Ali Raffee" />
+  <link rel="icon" href="../images/favicon.ico" type="image/x-icon" />
+  <meta property="og:title" content="Ali Raffee's Portfolio" />
+  <meta property="og:type" content="website" />
+
+  <link rel="stylesheet" href="../stylefolder/navbar.css" />
+  <link rel="stylesheet" href="../stylefolder/normalize.css" />
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;700&family=Barlow+Condensed:wght@400;700&family=Tektur:wght@600&display=swap" rel="stylesheet" />
 </head>
+
 <body>
+    <header>
+    <nav class="top-nav">
+      <div class="nav-container">
+        <ul class="nav-links">
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../blogsfolder/index.html">Blogs</a></li>
+          <li><a href="../designfolder/design.html">Design</a></li>
+          <li><a href="../devfolder/dev.html">Projects</a></li>
+        </ul>
+        <button class="burger nav-toggle" aria-label="Toggle navigation">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </button>
+      </div>
+    </nav>
+  </header>
     <canvas id="background"></canvas>
     <button id="toggle">Switch to Dimmer Mode</button>
     <a href="../flowerfolder/index.html">
     <button id="flower">Go to Testing Page</button>
     <script src="script.js"></script>
+      <script src="../scriptsfolder/overall.js"></script>
 </body>
 </html>
+
+
